# qchem-dev

dependent_libraries/: CheckREMs.C  STV.C
libpeqs_IDW/: Allocate.C  BoundaryCondition.C  CMakeLists.txt  ComputeDielectric.C  ConjugateGradient.C  Coordinates.C  Electrolyte.C  ElectronicRho.C  GetField.C  InitRhoPhiEps.C  Interpolator.C  JobControl.C  MultiGrid.C  NuclearRhoPhi.C  PrepareSolver.C  ReadWrite.C  SolvationCorrection.C  peqs_class.C  peqs_class.h  peqs_main.C  read_peqs.C  vdWRadius.C
libpeqs_RBF/: Allocate.C  BoundaryCondition.C  ComputeDielectric.C  Coordinates.C  ElectronicRho.C  FinDifDeriv.C  GetCOM.C  InitRhoPhiEps.C  NuclearRhoPhi.C  PrepareSolver.C  RBF_interpolation.C  SolvationCorrection.C  peqs_class.C  peqs_class.h  peqs_main.C  read_peqs.C  vdWRadius.C
libpeqs_SCCS/: Allocate.C  BoundaryCondition.C  CMakeLists.txt  ComputeDielectric.C  ComputeLambda.C  Coordinates.C  Electrolyte.h  ElectronicRho.C  InitRhoPhiEps.C  JobControl.C  NuclearRhoPhi.C  PeriodicTable.C  PrepareSolver.C  SolvationCorrection.C  SolventAware.C  peqs_class.C  peqs_class.h  peqs_main.C  read_peqs.C
